--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,11 @@ body {
 .header-right {
   float: right;
 }
-
+/*.header-wrap {
+  display: flex;
+  justify-content: space-between;
+}
+*/
 @media screen and (max-width: 500px) {
   .header a {
     float: none;
