--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
-body { 
+body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Arial', sans-serif;
 }
-/* HEADER*/
+
 .header {
   overflow: hidden;
   background-color: #f1f1f1;
@@ -38,11 +38,7 @@ body {
 .header-right {
   float: right;
 }
-/*.header-wrap {
-  display: flex;
-  justify-content: space-between;
-}
-*/
+
 @media screen and (max-width: 500px) {
   .header a {
     float: none;
@@ -54,4 +50,3 @@ body {
     float: none;
   }
 }
-
