--- a/src/components/TopTickers.css
+++ b/src/components/TopTickers.css
@@ -1,24 +1,50 @@
 /* TopTickers.css */
+.ticker-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center items horizontally */
+  width: 100%;
+  padding: 0.33rem;
+  box-sizing: border-box;
+}
+
+.ticker-title-container {
+  width: 100%;
+  text-align: center; /* Center the title text */
+  margin-bottom: 0.5rem; /* Space between title and ticker section */
+}
+
+.ticker-title {
+  font-size: 1.5rem; /* Adjust font size as needed */
+  font-weight: bold;
+  color: #fff;
+  transition: color 0.3s ease; /* Smooth transition for color change */
+}
+
+.ticker-title:hover {
+  color: #00ff00; /* Change to green on hover */
+}
+
 .ticker-section {
   display: flex;
-  justify-content: center; /* Center the tickers horizontally */
+  justify-content: flex-start; /* Align ticker items to the start */
   align-items: center; /* Center the tickers vertically */
   background-color: #1a202c; /* Dark background color */
   padding: 1rem;
   border-radius: 0.375rem; /* Rounded corners */
   width: 100%; /* Full width */
-  max-width: 600px; /* Adjust this value as needed */
+  max-width: 10000px; /* Adjust this value as needed */
   max-height: 2rem; /* Adjust this value as needed */
   box-sizing: border-box;
   overflow: hidden; /* Hide overflow */
+  position: relative; /* Ensure child elements are positioned correctly */
 }
 
 .ticker-wrapper {
   display: flex;
-  overflow: hidden;
   white-space: nowrap;
-  animation: ticker-scroll 15s linear infinite;
-  width: 100%; /* Full width */
+  animation: ticker-scroll 20s linear infinite;
+  padding-left: 100px; /* Add padding to the left to shift the start position */
 }
 
 .ticker-item {
@@ -35,9 +61,9 @@
 
 @keyframes ticker-scroll {
   0% {
-      transform: translateX(100%);
+    transform: translateX(0); /* Start at initial position */
   }
   100% {
-      transform: translateX(-100%);
+    transform: translateX(-50%); /* Move to the left end */
   }
 }
