added ohlc toggle

--- a/src/components/Chart.css
+++ b/src/components/Chart.css
@@ -164,6 +164,8 @@
   font-size: 12px;
   pointer-events: none;
   z-index: 10;
+  align-items: center;
+  display: inline-block;
 }
 
 .tooltip-label {
