--- a/src/components/DashboardComponent/Dashboard.css
+++ b/src/components/DashboardComponent/Dashboard.css
@@ -48,21 +48,22 @@
 }
 
 /* Margin utility classes */
-.ml-6 {
-  margin-left: 1.5rem; /* Margin left of 1.5rem */
+.ml-3 {
+  margin-left: 0.75rem; /* Margin left of 0.75rem */
+}
+
+/* Reduce or remove the right margin */
+.mr-2 {
+  margin-right: 0.5rem; /* Reduce margin right to 0.5rem */
 }
 
 /* Width utility classes */
-.w-1-4 {
-  width: 25%; /* Width of 25% */
+.w-1-3 {
+  width: 33.33%; /* Width of 33.33% */
 }
 
 .w-2-3 {
   width: 66.67%; /* Width of 66.67% */
-}
-
-.w-1-3 {
-  width: 33.33%; /* Width of 33.33% */
 }
 
 /* Margin-top utility class */
