--- a/src/components/Pages/SectorsPage/SectorsPage.css
+++ b/src/components/Pages/SectorsPage/SectorsPage.css
@@ -1,15 +1,22 @@
-#container {
-    width: 100%;
-    height: 400px;
-    overflow-x: auto;  /* Make the container scrollable horizontally */
-}
-h1 {
-    text-align: center;
-    margin-bottom: 20px;
-}
-
 body {
     margin: 0;
     padding: 0;
     overflow: hidden;
+}
+
+#container {
+    width: 100%;
+    height: calc(100% - 60px); /* Adjust height to account for navbar */
+    overflow-x: auto;  /* Make the container scrollable horizontally */
+    margin-top: 60px; /* Add margin to push content below the navbar */
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
+    padding-top: 20px; /* Ensure the title isn't too close to the navbar */
+}
+
+#legend {
+    margin-top: 10px; /* Adjust margin for better spacing */
 }
