--- a/src/components/TopTickersComponent/TopTickers.css
+++ b/src/components/TopTickersComponent/TopTickers.css
@@ -2,7 +2,7 @@
 .ticker-container {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Center items horizontally */
+  align-items: center;
   width: 100%;
   padding: 0.33rem;
   box-sizing: border-box;
@@ -10,60 +10,54 @@
 
 .ticker-title-container {
   width: 100%;
-  text-align: center; /* Center the title text */
-  margin-bottom: 0.5rem; /* Space between title and ticker section */
+  text-align: center;
+  margin-bottom: 0.5rem;
 }
 
 .ticker-title {
-  font-size: 1.5rem; /* Adjust font size as needed */
+  font-size: 1.5rem;
   font-weight: bold;
   color: #fff;
-  transition: color 0.3s ease; /* Smooth transition for color change */
+  transition: color 0.3s ease;
 }
 
 .ticker-title:hover {
-  color: #00ff00; /* Change to green on hover */
+  color: #00ff00;
 }
 
 .ticker-section {
   display: flex;
-  justify-content: flex-start; /* Align ticker items to the start */
-  align-items: center; /* Center the tickers vertically */
-  background-color: #1a202c; /* Dark background color */
+  justify-content: flex-start;
+  align-items: center;
+  background-color: #1a202c;
   padding: 1rem;
-  border-radius: 0.375rem; /* Rounded corners */
+  border-radius: 0.375rem;
   width: 100%; /* Full width */
-  max-width: 10000px; /* Adjust this value as needed */
-  max-height: 2rem; /* Adjust this value as needed */
+  height: 2rem; /* Fixed height */
   box-sizing: border-box;
-  overflow: hidden; /* Hide overflow */
-  position: relative; /* Ensure child elements are positioned correctly */
+  overflow: visible; /* Temporarily visible to check if the tickers are overflowing */
 }
 
 .ticker-wrapper {
   display: flex;
   white-space: nowrap;
   animation: ticker-scroll 20s linear infinite;
-  padding-left: 100px; /* Add padding to the left to shift the start position */
+  padding-left: 10px;
 }
 
 .ticker-item {
   display: flex;
   align-items: center;
   margin-right: 1rem;
-  font-size: 1rem; /* Adjust font size */
-  color: #fff; /* White text color */
-}
-
-.ticker-item span {
-  margin-right: 0.5rem;
+  font-size: 1rem;
+  color: #fff; /* Ensure text is visible */
 }
 
 @keyframes ticker-scroll {
   0% {
-    transform: translateX(0); /* Start at initial position */
+    transform: translateX(100%); /* Start at the right edge */
   }
   100% {
-    transform: translateX(-50%); /* Move to the left end */
+    transform: translateX(-100%); /* Move to the left edge */
   }
 }
