--- a/src/components/GainersAndLosersComponent/GainersAndLosers.css
+++ b/src/components/GainersAndLosersComponent/GainersAndLosers.css
@@ -45,10 +45,10 @@ table {
   table-layout: fixed; /* Ensures that table columns have a fixed width */
 }
 
-th, td {
-  padding: 8px; /* Adjust padding */
+th {
+
   text-align: left; /* Align text to the left */
-  border-bottom: 1px solid #444;
+ 
   color: #ffffff;
   font-size: 0.9rem; /* Adjust font size */
   white-space: nowrap; /* Prevent text from wrapping */
